# VoiceRagAgent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_PLAN.md  README_TEST.md  SCALING_ARCHITECTURE.md  docker-compose.yml  frigidaire_kb.md  neural_interface_refrigerator_kb.md  quantum_flux_heater_kb.md  test-params.html
backend/: main.py  pyproject.toml  pytest.ini
backend/app/: PROMPTS_README.md  bot.py  config.py  prompts.py  prompts_usage_examples.py
backend/app/middleware/: logging.py  rate_limit.py  sentry.py
backend/app/routers/: equipment.py  stream.py
backend/app/services/: embeddings.py  rag.py  text_extraction.py
backend/tests/: conftest.py
backend/tests/unit/: test_equipment_router.py  test_rag_service.py
deploy/aws/: README.md  backend-ecr.yml  backend-service.yml  backend-task.json  deploy-backend.ps1  deploy-backend.sh
frontend/: Dockerfile  nginx.conf  vite.config.ts
frontend/public/: simple-dashboard.html  unified-demo.html
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx  RealTimeChatPanel.tsx
frontend/src/components/ui/: simple-button.tsx
frontend/src/pages/: Dashboard.tsx  Stream.tsx  UnifiedDashboard.tsx
frontend/src/utils/: api.ts
